Bug 901962 - Allow touch events to hit targets outside the CSS viewport. r=roc